# VisuIFPT

./: .gitignore  README.md
Data/: teapot.stl
ObjectViewer/src/: CMakeLists.txt  ObjectViewer.cxx  ObjectViewer.h  ObjectViewer.ui  ObjectViewer_Breit.ui  main.cxx
VisuIFPT_cmd/src/: CMakeLists.txt  ifptReader.cxx
VisuIFPT_gui/: CMakeLists.txt  GUI.cxx  GUI.h  GUI.ui
VisuIFPT_gui/src/: CMakeLists.txt  CMakeSettings.json  Configurator.cxx  Configurator.h  GUI.cxx  GUI.h  GUI.ui  HelpClasses.cxx  HelpClasses.h  MainWindow.cxx  MainWindow.h  MainWindow.ui  Reader.cxx  Reader.h  configurator.ui  main.cxx  openPLY_dialog.cxx  openPLY_dialog.h  openPLY_dialog.ui
VisuIFPT_gui/src/include/: Reader.h
